--- a/modules/hdf5/CMakeLists.txt
+++ b/modules/hdf5/CMakeLists.txt
@@ -110,13 +110,23 @@ if (NOT IVW_USE_EXTERNAL_HDF5)
 
 else()
     find_package(hdf5 REQUIRED)
-    target_link_libraries(inviwo-module-hdf5 
-        PUBLIC 
-            hdf5::hdf5-shared 
-            hdf5::hdf5_hl-shared 
-            hdf5::hdf5_cpp-shared 
-            hdf5::hdf5_hl_cpp-shared
-    )
+    if(BUILD_SHARED_LIBS)
+        target_link_libraries(inviwo-module-hdf5 
+            PUBLIC 
+                hdf5::hdf5-shared 
+                hdf5::hdf5_hl-shared 
+                hdf5::hdf5_cpp-shared 
+                hdf5::hdf5_hl_cpp-shared
+        )
+    else()
+        target_link_libraries(inviwo-module-hdf5 
+            PUBLIC 
+                hdf5::hdf5-static 
+                hdf5::hdf5_hl-static 
+                hdf5::hdf5_cpp-static 
+                hdf5::hdf5_hl_cpp-static
+        )
+    endif()
     ivw_vcpkg_install(hdf5 MODULE HDF5)
     set(version ${HDF5_VERSION_STRING})
 endif()
