Various compile fixes

--- a/modules/discretedata/CMakeLists.txt
+++ b/modules/discretedata/CMakeLists.txt
@@ -57,6 +57,7 @@ set(SOURCE_FILES
     src/processors/createchannel.cpp
     src/processors/datasetfrombase.cpp
     src/processors/datasetsource.cpp
+    src/processors/exampledataset.cpp
     src/processors/meshfromdataset.cpp
     src/processors/segmentationvoxelizer.cpp
     src/processors/volumefromdataset.cpp
