optimizations for covering array

--- a/modules/propertybasedtesting/CMakeLists.txt
+++ b/modules/propertybasedtesting/CMakeLists.txt
@@ -8,15 +8,16 @@ set(HEADER_FILES
     include/inviwo/propertybasedtesting/algorithm/coveringarray.h
     include/inviwo/propertybasedtesting/algorithm/generatingassignments.h
     include/inviwo/propertybasedtesting/algorithm/histogramtesting.h
+    include/inviwo/propertybasedtesting/algorithm/reservoirsampling.h
+    include/inviwo/propertybasedtesting/html/html.h
+    include/inviwo/propertybasedtesting/html/report.h
     include/inviwo/propertybasedtesting/processors/faultycubeproxyprocessor.h
     include/inviwo/propertybasedtesting/processors/histogram.h
     include/inviwo/propertybasedtesting/processors/imagecomparator.h
     include/inviwo/propertybasedtesting/processors/randomvolumegenerator.h
-    include/inviwo/propertybasedtesting/testproperty.h
-    include/inviwo/propertybasedtesting/html/report.h
-    include/inviwo/propertybasedtesting/html/html.h
     include/inviwo/propertybasedtesting/propertybasedtestingmodule.h
     include/inviwo/propertybasedtesting/propertybasedtestingmoduledefine.h
+    include/inviwo/propertybasedtesting/testproperty.h
 )
 ivw_group("Header Files" ${HEADER_FILES})
 
@@ -26,14 +27,15 @@ set(SOURCE_FILES
     src/algorithm/coveringarray.cpp
     src/algorithm/generatingassignments.cpp
     src/algorithm/histogramtesting.cpp
+    src/algorithm/reservoirsampling.cpp
+    src/html/html.cpp
+    src/html/report.cpp
     src/processors/faultycubeproxyprocessor.cpp
     src/processors/histogram.cpp
     src/processors/imagecomparator.cpp
     src/processors/randomvolumegenerator.cpp
-    src/testproperty.cpp
-    src/html/report.cpp
-    src/html/html.cpp
     src/propertybasedtestingmodule.cpp
+    src/testproperty.cpp
 )
 ivw_group("Source Files" ${SOURCE_FILES})
 
