Core: Adds a compile time owning string class

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -341,6 +341,7 @@ set(HEADER_FILES
     ${IVW_INCLUDE_DIR}/inviwo/core/util/spatialsampler.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/stacktrace.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/statecoordinator.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/util/staticstring.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/stdextensions.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/stringconversion.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/stringlogger.h
@@ -635,6 +636,7 @@ set(SOURCE_FILES
     util/spatial4dsampler.cpp
     util/stacktrace.cpp
     util/statecoordinator.cpp
+    util/staticstring.cpp
     util/stdextensions.cpp
     util/stringconversion.cpp
     util/stringlogger.cpp
@@ -690,6 +692,7 @@ set(TEST_FILES
     tests/unittests/serialize-container-test.cpp
     tests/unittests/serializer-polymorphic-test.cpp
     tests/unittests/serializer-test.cpp
+    tests/unittests/staticstring-test.cpp
     tests/unittests/stringconversion-test.cpp
     tests/unittests/tfprimitiveset-test.cpp
     tests/unittests/typedmesh-test.cpp
