Core: Adds a utility to convert a string_view to a c_str using a stack buffer

--- a/modules/base/tests/benchmarks/CMakeLists.txt
+++ b/modules/base/tests/benchmarks/CMakeLists.txt
@@ -1,18 +1,18 @@
 project(BaseBenchmarks)
 
-set(SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/benchmain.cpp)
+set(SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/marchingcubes.cpp)
 ivw_group("Source Files" ${SOURCE_FILES})
 
 # Create application
-add_executable(base-benchmark MACOSX_BUNDLE WIN32 ${SOURCE_FILES})
+add_executable(bm-marchingcubes MACOSX_BUNDLE WIN32 ${SOURCE_FILES})
 find_package(benchmark CONFIG REQUIRED)
-target_link_libraries(base-benchmark 
+target_link_libraries(bm-marchingcubes 
     PUBLIC 
         benchmark::benchmark
         inviwo::module::base
 )
-set_target_properties(base-benchmark PROPERTIES FOLDER benchmarks)
+set_target_properties(bm-marchingcubes PROPERTIES FOLDER benchmarks)
 
 # Define defintions and properties
-ivw_define_standard_properties(base-benchmark)
-ivw_define_standard_definitions(base-benchmark base-benchmark)
+ivw_define_standard_properties(bm-marchingcubes)
+ivw_define_standard_definitions(bm-marchingcubes bm-marchingcubes)
