--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -329,6 +329,7 @@ set(HEADER_FILES
     ${IVW_INCLUDE_DIR}/inviwo/core/util/pathtype.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/raiiutils.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/rendercontext.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/util/safecstr.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/settings/linksettings.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/settings/settings.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/settings/systemsettings.h
@@ -626,6 +627,7 @@ set(SOURCE_FILES
     util/moduleutils.cpp
     util/observer.cpp
     util/rendercontext.cpp
+    util/safecstr.cpp
     util/settings/linksettings.cpp
     util/settings/settings.cpp
     util/settings/systemsettings.cpp
@@ -842,4 +844,8 @@ else()
         COMPONENT Application
     )
 endif()
-#--------------------------------------------------------------------
+
+if(IVW_TEST_BENCHMARKS)
+    add_subdirectory(tests/benchmarks)
+endif()
+
