Core: Major refactorings. * Serialization no longer supports use of the "allowReferences" to serialize pointer to the same object multiple times. Reasoning being that it requires all properties and ports, to always be present in the xml even if they don't have any state that needs serialization. The new solution uses "paths" (a dot seperated list of identifiers) instead of pointers where needed. * Some of the serialization functions now supprorts filters and projections, to void having to create temporary objects to serialize. * Property now has a `virtual bool isDefaultState() const` function. Should generally be overriden by subclases * Property now has a `virtual bool needsDerialization() const` function, the default impl returns true, when the serliazation mode is All, or Default and !isDefaultState(), otherwise false. * PropertyOwner now only serializes property that "needsDeserialization" this reduces. * DefaultValues now uses StaticString to make the implementaion constexpr * Many classIdentifiers now return const std::string& instead of std::string to avoud creating new string. This can easly be done by keeping a static std::string around. * Now uses std::string_view instead of const std::string& in many places to avoid haing to create strings with dynamic allocations. * StringConversion.h now has a StrBuffer class to make it easyier to format string using a stack buffer. Very useful for concatenation. * StringConversion.h now has a forEachStringPart function to call a callback on parts of a string. * Processor identifiers now follow the same rules as other identifiers * MinMaxProperty is no longer a template property * Animation update to core serialization changes

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -155,6 +155,7 @@ set(HEADER_FILES
     ${IVW_INCLUDE_DIR}/inviwo/core/network/autolinker.h
     ${IVW_INCLUDE_DIR}/inviwo/core/network/evaluationerrorhandler.h
     ${IVW_INCLUDE_DIR}/inviwo/core/network/lambdanetworkvisitor.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/network/networkedge.h
     ${IVW_INCLUDE_DIR}/inviwo/core/network/networklock.h
     ${IVW_INCLUDE_DIR}/inviwo/core/network/networkutils.h
     ${IVW_INCLUDE_DIR}/inviwo/core/network/networkvisitor.h
@@ -487,6 +488,7 @@ set(SOURCE_FILES
     network/autolinker.cpp
     network/evaluationerrorhandler.cpp
     network/lambdanetworkvisitor.cpp
+    network/networkedge.cpp
     network/networklock.cpp
     network/networkutils.cpp
     network/networkvisitor.cpp
