Animation: Added a CallbackTrack, which allows keyframes with callbacks. A CallbackKeyframe has one callback for forward animation (do) and one for backward animation (undo).

--- a/modules/animation/CMakeLists.txt
+++ b/modules/animation/CMakeLists.txt
@@ -20,6 +20,9 @@ set(HEADER_FILES
     include/modules/animation/datastructures/basetrack.h
     include/modules/animation/datastructures/buttonkeyframe.h
     include/modules/animation/datastructures/buttonkeyframesequence.h
+    include/modules/animation/datastructures/callbackkeyframe.h
+    include/modules/animation/datastructures/callbackkeyframesequence.h
+    include/modules/animation/datastructures/callbacktrack.h
     include/modules/animation/datastructures/camerakeyframe.h
     include/modules/animation/datastructures/controlkeyframe.h
     include/modules/animation/datastructures/controlkeyframesequence.h
@@ -65,6 +68,9 @@ set(SOURCE_FILES
     src/datastructures/basetrack.cpp
     src/datastructures/buttonkeyframe.cpp
     src/datastructures/buttonkeyframesequence.cpp
+    src/datastructures/callbackkeyframe.cpp
+    src/datastructures/callbackkeyframesequence.cpp
+    src/datastructures/callbacktrack.cpp
     src/datastructures/camerakeyframe.cpp
     src/datastructures/controlkeyframe.cpp
     src/datastructures/controlkeyframesequence.cpp
