Vcpkg: update to version 0bf3923f9fab4001c00f0f429682a0853b5749e0

--- a/apps/inviwopyapp/CMakeLists.txt
+++ b/apps/inviwopyapp/CMakeLists.txt
@@ -5,6 +5,7 @@ project(inviwopyapp)
 find_package(Qt5Core QUIET REQUIRED)
 find_package(Qt5Gui QUIET REQUIRED)
 find_package(Qt5Widgets QUIET REQUIRED)
+find_package(pybind11 CONFIG REQUIRED)
 
 #--------------------------------------------------------------------
 # Add source files
