--- a/modules/nifti/CMakeLists.txt
+++ b/modules/nifti/CMakeLists.txt
@@ -17,13 +17,19 @@ ivw_group("Source Files" ${SOURCE_FILES})
 # Create module
 ivw_create_module(${SOURCE_FILES} ${HEADER_FILES} ${SHADER_FILES})
 
-add_subdirectory(ext/nifticlib-2.0.0)
-target_link_libraries(inviwo-module-nifti PRIVATE inviwo::niftiio inviwo::znz)
+option(IVW_USE_EXTERNAL_NIFTI "Nifticlib is provided externaly" OFF)
+if(NOT IVW_USE_EXTERNAL_NIFTI)
+	add_subdirectory(ext/nifticlib-2.0.0)
+	target_link_libraries(inviwo-module-nifti PRIVATE inviwo::niftiio inviwo::znz)
 
-# niftio and znz are under same niftilib license 
-ivw_register_license_file(ID niftilib NAME "Niftilib" TARGET inviwo::niftiio MODULE Nifti
-    URL http://niftilib.sourceforge.net/
-    FILES ${CMAKE_CURRENT_SOURCE_DIR}/ext/nifticlib-2.0.0/LICENSE
-)
+	# niftio and znz are under same niftilib license 
+	ivw_register_license_file(ID niftilib NAME "Niftilib" TARGET inviwo::niftiio MODULE Nifti
+	    URL http://niftilib.sourceforge.net/
+    	FILES ${CMAKE_CURRENT_SOURCE_DIR}/ext/nifticlib-2.0.0/LICENSE
+	)
+else()
+    find_package(NIFTI CONFIG REQUIRED)
+    target_link_libraries(inviwo-module-nifti PRIVATE NIFTI::znz NIFTI::niftiio)
+    ivw_vcpkg_install(nifticlib MODULE Nifti) 
+endif()
 
-ivw_make_package(InviwoNiftiModule inviwo-module-nifti)
