OpenGL: ImageGL and FrameBufferObject refactoring.
ImageGL will now only reattach textures when needed. The state is now also only stored and resored when needed.

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -325,6 +325,7 @@ set(HEADER_FILES
     ${IVW_INCLUDE_DIR}/inviwo/core/util/memoryfilehandle.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/metadatatoproperty.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/moduleutils.h
+    ${IVW_INCLUDE_DIR}/inviwo/core/util/moveonlyvalue.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/observer.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/ostreamjoiner.h
     ${IVW_INCLUDE_DIR}/inviwo/core/util/pathtype.h
@@ -627,6 +628,7 @@ set(SOURCE_FILES
     util/memoryfilehandle.cpp
     util/metadatatoproperty.cpp
     util/moduleutils.cpp
+    util/moveonlyvalue.cpp
     util/observer.cpp
     util/rendercontext.cpp
     util/safecstr.cpp
