Animation: Bug fixes - Control/Callback tracks did not operate on all keyframes - Added tests for control/callback tracks - Fixed serialization/deserialization for PropertyTrack where the property is not in the network (if loaded outside of workspace). - Added functionality for playing animation backwards - Removed unused code (AnimationPlaySettings) - Fixed a couple warnings

--- a/modules/animation/CMakeLists.txt
+++ b/modules/animation/CMakeLists.txt
@@ -5,6 +5,7 @@ ivw_module(Animation)
 #--------------------------------------------------------------------
 # Add header files
 set(HEADER_FILES
+    include/modules/animation/algorithm/animationrange.h
     include/modules/animation/animationcontroller.h
     include/modules/animation/animationcontrollerobserver.h
     include/modules/animation/animationmanager.h
@@ -56,6 +57,7 @@ ivw_group("Header Files" ${HEADER_FILES})
 #--------------------------------------------------------------------
 # Add source files
 set(SOURCE_FILES
+    src/algorithm/animationrange.cpp
     src/animationcontroller.cpp
     src/animationcontrollerobserver.cpp
     src/animationmanager.cpp
