QtWidgets/QtEditor: updates to the welcome widget and change log, Updates to the light property widget

--- a/src/qt/editor/CMakeLists.txt
+++ b/src/qt/editor/CMakeLists.txt
@@ -112,7 +112,13 @@ endif()
 
 ivw_group("Source Files" ${SOURCE_FILES})
 
-#--------------------------------------------------------------------
+# Add resource file
+qt5_add_resources(QRC_FILE ${IVW_RESOURCES_DIR}/changelog.qrc)
+source_group("Resource Files" FILES 
+    ${IVW_RESOURCES_DIR}/changelog.qrc
+    ${QRC_FILE}
+)
+
 # Create library
 find_package(Qt5Core 5.12 QUIET REQUIRED)
 find_package(Qt5Gui QUIET REQUIRED)
@@ -122,7 +128,7 @@ find_package(Qt5Svg QUIET REQUIRED)
 
 qt5_wrap_cpp(MOCED_FILES ${MOC_FILES})
 source_group("MOC Files" FILES ${MOCED_FILES})
-add_library(inviwo-qteditor ${SOURCE_FILES} ${MOCED_FILES} ${HEADER_FILES})
+add_library(inviwo-qteditor ${SOURCE_FILES} ${MOCED_FILES} ${HEADER_FILES} ${QRC_FILE})
 add_library(inviwo::qteditor ALIAS inviwo-qteditor)
 target_link_libraries(inviwo-qteditor PUBLIC 
     inviwo::core 
@@ -139,77 +145,52 @@ if(TARGET inviwo::meta)
     target_compile_definitions(inviwo-qteditor PRIVATE IVW_INVIWO_META)
 endif()
 
-#--------------------------------------------------------------------
 # Define defintions
 ivw_define_standard_definitions(IVW_QTEDITOR inviwo-qteditor)
 ivw_define_standard_properties(inviwo-qteditor)
 
-#--------------------------------------------------------------------
 # Optimize compilation with pre-compilied headers
 ivw_compile_optimize_on_target(inviwo-qteditor)
 
-#--------------------------------------------------------------------
 # Generate html version of changelog (for the welcome widget), if python is available
-
-ivw_check_python_module(markdown has_markdown)
-ivw_check_python_module(gfm has_gfm)
-if(${has_markdown} AND ${has_gfm})
-    set(build_changelog_default ON)
-else()
-    set(build_changelog_default OFF)
-endif()
-
-set(IVW_CFG_BUILD_CHANGELOG ${build_changelog_default} CACHE BOOL "Generate html version of changelog (for the welcome widget)")
-
+find_package(PythonInterp)
+set(IVW_CFG_BUILD_CHANGELOG ${PYTHONINTERP_FOUND} CACHE BOOL 
+    "Generate html version of changelog (for the welcome widget)")
 if(IVW_CFG_BUILD_CHANGELOG)
-    if(NOT ${has_markdown})
-        message(FATAL_ERROR "Missing python module 'markdown' needed to create changelog."
-            " Either install 'markdown' (python -m pip install markdown<3)"
-            " or disable 'IVW_CFG_BUILD_CHANGELOG'")
-    endif()
-    if(NOT ${has_gfm})
-        message(FATAL_ERROR "Missing python module 'py-gfm' needed to create changelog."
-            " Either install 'py-gfm' (python -m pip install py-gfm)"
-            " or disable 'IVW_CFG_BUILD_CHANGELOG'")
-    endif()
+    find_package(PythonInterp REQUIRED)
 
-    find_package(PythonInterp)
-    if (PYTHONINTERP_FOUND)
-        set(srcFile ${IVW_ROOT_DIR}/CHANGELOG.md)
-        set(buildFile ${CMAKE_CURRENT_BINARY_DIR}/changelog.html)
-        set(destDir ${IVW_RESOURCES_DIR}/)
-        file(GENERATE 
-            OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/CopyIfFound.cmake"
-            CONTENT 
-                "if (EXISTS \"${buildFile}\")
-                    file(COPY \"${buildFile}\" DESTINATION \"${destDir}\")
-                endif()"
-        )
+    set(srcFile ${IVW_ROOT_DIR}/CHANGELOG.md)
+    set(buildFile ${CMAKE_CURRENT_BINARY_DIR}/changelog.html)
+    set(destDir ${IVW_RESOURCES_DIR}/)
+    file(GENERATE 
+        OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/CopyIfFound.cmake"
+        CONTENT 
+            "if (EXISTS \"${buildFile}\")
+                file(COPY \"${buildFile}\" DESTINATION \"${destDir}\")
+            endif()"
+    )
 
-        add_custom_command(OUTPUT ${buildFile}
-            COMMAND ${PYTHON_EXECUTABLE} 
-                 ${IVW_ROOT_DIR}/tools/changelog-to-html.py 
-                -i ${srcFile}
-                -o ${buildFile}
-            WORKING_DIRECTORY ${IVW_ROOT_DIR}
-            MAIN_DEPENDENCY ${srcFile}
-            DEPENDS ${IVW_ROOT_DIR}/tools/changelog-to-html.py
-            COMMENT "Generating HTML version of the Inviwo Changelog"
-            VERBATIM
-        )
-        add_custom_target("inviwo-changelog"
-            DEPENDS ${buildFile}
-            COMMAND ${CMAKE_COMMAND} -P "${CMAKE_CURRENT_BINARY_DIR}/CopyIfFound.cmake"
-            SOURCES ${srcFile}
-        )
-
-        add_dependencies("inviwo-qteditor" "inviwo-changelog")
-    endif()
+    add_custom_command(OUTPUT ${buildFile}
+        COMMAND ${PYTHON_EXECUTABLE} 
+             ${IVW_ROOT_DIR}/tools/changelog-to-html.py 
+            -i ${srcFile}
+            -o ${buildFile}
+        WORKING_DIRECTORY ${IVW_ROOT_DIR}
+        MAIN_DEPENDENCY ${srcFile}
+        DEPENDS ${IVW_ROOT_DIR}/tools/changelog-to-html.py
+        COMMENT "Generating HTML version of the Inviwo Changelog"
+        VERBATIM
+    )
+    add_custom_target("inviwo-changelog"
+        DEPENDS ${buildFile}
+        COMMAND ${CMAKE_COMMAND} -P "${CMAKE_CURRENT_BINARY_DIR}/CopyIfFound.cmake"
+        SOURCES ${srcFile} ${IVW_ROOT_DIR}/tools/changelog-to-html.py 
+    )
+    add_dependencies("inviwo-qteditor" "inviwo-changelog")
 endif()
 
 ivw_deploy_qt(inviwo-qteditor)
 
-#--------------------------------------------------------------------
 # Make package (for other projects to find)
 ivw_default_install_targets(inviwo-qteditor)
 ivw_qt_add_to_install(qt_editor Qt5Core Qt5Gui Qt5Widgets Qt5Help Qt5Sql Qt5Svg) # Qt5Sql is needed by Qt5Help
